--- a/src/app/features/admin-layout/department-management/department-management.component.html
+++ b/src/app/features/admin-layout/department-management/department-management.component.html
@@ -19,7 +19,7 @@
           <button 
    
           *ngFor="let department of departments; let i = index" 
-          class="group transition-all hover:scale-110   bg-white border-[var(--primary)] hover:bg-[var(--primary-dark)] hover:text-white hover:border-[var(--primary-light)]  h-48 p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-dashed">
+          class="group transition-all hover:scale-110   bg-white border-[var(--primary)] hover:bg-[var(--primary-dark)] hover:text-white hover:border-[var(--primary-light)]  h-auto p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-dashed">
 
           <!-- Header -->
           <div class="flex gap-4 items-center">
