--- a/src/app/features/admin-layout/kiosk-management/kiosk-management.component.html
+++ b/src/app/features/admin-layout/kiosk-management/kiosk-management.component.html
@@ -30,7 +30,7 @@
         <button 
  
         *ngFor="let kiosk of kiosks; let i = index" 
-        class="group transition-all hover:scale-110  {{kiosk.status == 'maintenance' ? 'bg-yellow-50 border-yellow-500' :'bg-white border-[var(--primary)] hover:bg-[var(--primary-dark)] hover:text-white hover:border-[var(--primary-light)] '}} h-48 p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-dashed border-black/10 ">
+        class="group transition-all hover:scale-110  {{kiosk.status == 'maintenance' ? 'bg-yellow-50 border-yellow-500' :'bg-white border-[var(--primary)] hover:bg-[var(--primary-dark)] hover:text-white hover:border-[var(--primary-light)] '}} h-auto p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-dashed border-black/10 ">
 
           <!-- Header -->
           <div class="flex gap-4 items-center">
@@ -48,6 +48,10 @@
             <div>
               <span class="font-medium">Kiosk Code: </span>
               <span class="opacity-75">{{kiosk.code}}</span>
+            </div>
+            <div>
+              <span class="font-medium">Printer: </span>
+              <span class="opacity-75">{{kiosk.printer_ip}}</span>
             </div>
             <div  class="flex-1">
               <span class="font-medium">Last Online: </span>
