--- a/src/app/features/desk-attendant-layout/da-terminalmgmt/da-terminalmgmt.component.html
+++ b/src/app/features/desk-attendant-layout/da-terminalmgmt/da-terminalmgmt.component.html
@@ -13,7 +13,7 @@
           <button 
             (click)="selectCounter(terminal)"
             *ngFor="let terminal of terminals; let i = index" 
-            class="group transition-all hover:scale-110 {{terminal.status == 'maintenance' ? 'bg-yellow-50 border-yellow-500' :'bg-white hover:bg-green-900 hover:text-white hover:border-green-500'}} h-48 p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-solid border-black/10">
+            class="group transition-all hover:scale-110 {{terminal.status == 'maintenance' ? 'bg-yellow-50 border-yellow-500' :'bg-white hover:bg-green-900 hover:text-white hover:border-green-500'}} h-auto p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-solid border-black/10">
             <!-- Header -->
             <div class="flex gap-4 items-center">
               <div class="w-16 h-12 p-2 rounded-lg bg-green-200 group-hover:bg-yellow-200">
