--- a/src/app/features/admin-layout/user-management/user-management.component.html
+++ b/src/app/features/admin-layout/user-management/user-management.component.html
@@ -9,7 +9,7 @@
 <div class="w-1/3 h-full bg-white shadow-lg rounded-3xl transition-transform duration-500 ease-in-out">
 
        <h2 [ngClass]="{'opacity-0 translate-y-4': metricsLoading, 'opacity-100 translate-y-0': !metricsLoading}"  
-        class="mt-6 mb-2 text-2xl  tracking-wider text-center text-green-800 uppercase duration-500 ease-in-out">
+        class="mt-6 mb-2 text-2xl  tracking-wider text-center text-[var(--primary)] uppercase duration-500 ease-in-out">
             Performance Metrics
           </h2>
           <div [ngClass]="{'opacity-0 translate-y-4': metricsLoading, 'opacity-100 translate-y-0': !metricsLoading}"  
@@ -24,6 +24,7 @@
             <div class="relative">
               
               <div class="w-24 h-24 overflow-hidden rounded-full shadow-lg ring-4 ring-green-50">
+
                 <img [src]="currentUser.profile || 'assets/images/noprofile.png'"
                      alt="{{ currentUser.fullname }}"
                      class="object-cover w-full h-full">
@@ -35,7 +36,7 @@
             </div>
             <h3 class="mt-3 text-xl font-medium text-gray-800">{{ currentUser.fullname }}</h3>
              <div class="px-3  rounded-full">
-              <span class="text-sm text-gray-600">{{ currentUser.role }}</span>
+              <span class="text-sm text-[var(--primary)] opacity-85">{{ currentUser.role }}</span>
             </div>
            
           </div>
@@ -116,7 +117,7 @@
             >
               <app-lottie-animation class="w-12 h-12 " animation="location"></app-lottie-animation>
 
-              <span class="text-sm">{{ currentUser.division }}</span>
+              <span class="text-sm text-[var(--primary)]">{{ currentUser.division }}</span>
             </div>
           </div>
         </div>
