--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,7 +2,7 @@
   /* New Primary Palette */
   --primary: #2F4A2C;
   --primary-dark: #1F3B1F; /* Darker shade */
-  --primary-light: #416E41; /* Darker shade */
+  --primary-light: #bed8be; /* Darker shade */
   --primary-hover: #3B5B3B; /* Hover color */
   --primary-bg-light: #d9f2d9; /* Lighter shade */
 
