--- a/src/app/features/desk-attendant-layout/da-terminalmgmt/da-terminalmgmt.component.html
+++ b/src/app/features/desk-attendant-layout/da-terminalmgmt/da-terminalmgmt.component.html
@@ -60,7 +60,7 @@
   <div *ngIf="selectedCounter && !actionLoading" class="min-w-screen-lg mx-auto p-6 space-y-6">
     <!-- Header -->
     <header class="flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-gray-800">Queuing Overview</h1>
+      <h1 class="text-2xl font-bold text-gray-800">COUNTER {{this.selectedCounter.number}}</h1>
       <button 
         (click)="openTerminateModal()" 
         class="bg-red-500 text-white px-4 py-2 rounded-md hover:bg-red-600 transition-colors duration-200 flex items-center space-x-2">
