--- a/src/app/features/desk-attendant-layout/da-terminalmgmt/da-terminalmgmt.component.html
+++ b/src/app/features/desk-attendant-layout/da-terminalmgmt/da-terminalmgmt.component.html
@@ -1,15 +1,15 @@
 
 <div class="min-w-screen-lg mx-auto">
   <!-- Counter Selection Screen -->
-  <div *ngIf="!selectedCounter" class="max-w-full mx-auto p-6">
+  <div *ngIf="!selectedCounter" class="max-w-full mx-auto ">
     <div class="bg-white rounded-2xl shadow-2xl overflow-hidden">
       <header class="bg-[#283c1c] text-white p-8">
         <h1 class="text-4xl font-bold text-center">{{division?.name?.replaceAll('Division','')?.trim()}} Terminals</h1>
         <p class="text-center mt-2 text-[#a3c089]">Please select a counter to proceed</p>
       </header>
 
-      <main class="p-8">
-        <div class="grid grid-cols-3 px-3 py-3 gap-3"> 
+      <main class="p-6">
+        <div class="grid grid-cols-3 gap-3"> 
           <button 
             (click)="selectCounter(terminal)"
             *ngFor="let terminal of terminals; let i = index" 
@@ -57,10 +57,10 @@
   </div>
 
   <!-- Terminal Management Screen -->
-  <div *ngIf="selectedCounter && !actionLoading" class="min-w-screen-lg mx-auto p-6 space-y-6">
+  <div *ngIf="selectedCounter && !actionLoading" class="min-w-screen-lg mx-auto  space-y-6">
     <!-- Header -->
     <header class="flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-gray-800">COUNTER {{this.selectedCounter.number}}</h1>
+      <h1 class="text-2xl font-medium text-gray-800">You are currently on <span class="font-semibold text-[var(--primary)]">TERMINAL {{this.selectedCounter.number}}</span></h1>
       <button 
         (click)="openTerminateModal()" 
         class="bg-red-500 text-white px-4 py-2 rounded-md hover:bg-red-600 transition-colors duration-200 flex items-center space-x-2">
@@ -106,12 +106,12 @@
 
       <!-- Upcoming Number -->
       <div class="bg-white p-4 rounded-lg shadow-md relative min-h-[160px]">
-        <h3 class="text-gray-800 text-lg font-semibold absolute top-2 left-2">UP-COMING</h3>
+        <h3 class="text-gray-800 text-lg font-semibold absolute top-2 left-2">UPCOMING</h3>
         <div class="flex items-center justify-center h-full">
           <p class="text-5xl font-bold text-red-600">{{ lastCalledNumber }}</p>
         </div>
         <div class="absolute top-2 right-2">
-          <span class="bg-green-600 text-white rounded-full p-2 flex items-center justify-center">
+          <span class="bg-[var(--primary)] text-white rounded-full p-2 flex items-center justify-center">
             <span class="material-icons">navigate_next</span>
           </span>
         </div>
@@ -143,7 +143,7 @@
           </div>
         </div>
         <div class="absolute top-2 right-2">
-          <span class="bg-green-600 text-white rounded-full p-2 flex items-center justify-center">
+          <span class="bg-[var(--primary)] text-white rounded-full p-2 flex items-center justify-center">
             <span class="material-icons">schedule</span>
           </span>
         </div>
