--- a/src/app/features/admin-layout/user-management/user-management.component.html
+++ b/src/app/features/admin-layout/user-management/user-management.component.html
@@ -4,14 +4,14 @@
   <div class="w-full mx-auto space-y-8">
 
     <div class="flex space-x-8">
-      <!-- Performance Metrics Card -->
-<!-- Performance Metrics Card with Transition -->
-<div class="w-1/3 h-full bg-white shadow-lg rounded-3xl transition-transform duration-500 ease-in-out">
+     
+    <div class="w-1/3 h-full bg-white shadow-lg rounded-3xl transition-transform duration-500 ease-in-out">
 
        <h2 [ngClass]="{'opacity-0 translate-y-4': metricsLoading, 'opacity-100 translate-y-0': !metricsLoading}"  
         class="mt-6 mb-2 text-2xl  tracking-wider text-center text-[var(--primary)] uppercase duration-500 ease-in-out">
             Performance Metrics
           </h2>
+
           <div [ngClass]="{'opacity-0 translate-y-4': metricsLoading, 'opacity-100 translate-y-0': !metricsLoading}"  
            class="w-20 h-0.5 mx-auto mb-2 rounded-full bg-gradient-to-r from-green-800 to-green-900 duration-500 ease-in-out"></div>
 
@@ -154,15 +154,14 @@
 
         <div >
           <div class="overflow-hidden border border-gray-200 rounded-xl">
-            <table class="w-full">
+            <table  class="w-full">
               <thead>
-                <tr class=" bg-[var(--primary)] text-white">
-                  <th class="px-6 py-4 text-sm font-semibold text-left ">Name</th>
-
-                  <th class="px-6 py-4 text-sm font-semibold text-left ">Location</th>
-                  <th class="px-6 py-4 text-sm font-semibold text-left ">Type</th>
-                  <th class="px-6 py-4 text-sm font-semibold text-left ">Status</th>
-                  <th class="px-6 py-4 text-sm font-semibold text-left ">Action</th>
+                <tr class=" bg-[var(--primary)] text-base text-white">
+                  <th class="px-6 py-4  font-semibold text-left ">Name</th>
+                  <th class="px-6 py-4  font-semibold text-left ">Location</th>
+                  <th class="px-6 py-4  font-semibold text-left ">Type</th>
+                  <th class="px-6 py-4  font-semibold text-left ">Status</th>
+                  <th class="px-6 py-4  font-semibold text-left ">Action</th>
                 </tr>
               </thead>
               <tbody class="divide-y divide-gray-200">
@@ -190,11 +189,11 @@
 
                   <td class="px-6 py-4">
                     <div class="flex items-center space-x-3">
-                      <span class="text-sm text-gray-700">{{ user.fullname }}</span>
+                      <span class="text-base text-gray-700">{{ user.fullname }}</span>
                     </div>
                   </td>
-                  <td class="px-6 py-4 text-sm text-gray-600">{{ user.division }}</td>
-                  <td class="px-6 py-4 text-sm text-gray-600">
+                  <td class="px-6 py-4 text-base text-gray-600">{{ user.division }}</td>
+                  <td class="px-6 py-4 text-base text-gray-600">
                     {{ user.role === 'superadmin' ? 'Super Admin' : user.role !== 'Desk attendant' ? 'Admin' : 'Desk Attendant' }}
                   </td>
                   <td class="px-6 py-4">
@@ -210,7 +209,7 @@
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
                         </svg>
                       </button>
-                      <button (click)="deleteUser(user)" class="text-red-400 hover:text-red-600">
+                      <button (click)="confirmDeleteUser(user)" class="text-red-400 hover:text-red-600">
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
                         </svg>
@@ -226,13 +225,13 @@
           <div class="flex items-center justify-between mt-6">
             <button (click)="previousPage()"
                     [disabled]="currentPage === 1"
-                    class="px-4 py-2 text-sm text-gray-600 bg-white border border-gray-200 rounded-lg hover:bg-gray-50 disabled:opacity-50">
+                    class="px-4 py-2 text-base text-gray-600 bg-white border border-gray-200 rounded-lg hover:bg-gray-50 disabled:opacity-50">
               Previous
             </button>
-            <span class="text-sm text-gray-600">Page {{ currentPage }} of {{ totalPages }}</span>
+            <span class="text-base text-gray-600">Page {{ currentPage }} of {{ totalPages }}</span>
             <button (click)="nextPage()"
                     [disabled]="currentPage === totalPages"
-                    class="px-4 py-2 text-sm text-white  bg-[var(--primary)] rounded-lg hover:bg-hover-green disabled:opacity-50">
+                    class="px-4 py-2 text-base text-white  bg-[var(--primary)] rounded-lg hover:bg-hover-green disabled:opacity-50">
               Next
             </button>
           </div>
@@ -251,6 +250,16 @@
   (closeModal)="closeModal()"
   (accountCreated)="onAccountCreated($event)">
 </app-create-account-modal>
+
+
+<app-confirmation *ngIf="showDeleteConfirmation"
+                  type="delete"
+                  title="Delete User"
+                  description="Are you sure you want to delete {{ userToDelete?.fullname }}?"
+                  (onConfirm)="onConfirmDelete()"
+                  (onCancel)="onCancelDelete()"
+                  animation="yellowWarning">
+</app-confirmation>
 
 
 
