--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -45,7 +45,7 @@
             <div class="flex items-center gap-3">
               <img
                 [src]="getUserProfile()"
-                class="w-10 h-10 border-2 border-white rounded-full shadow-md"
+                class="w-10 h-10 border-2 border-white rounded-full object-cover shadow-md"
                 alt="Profile"
                 onerror="this.src='assets/images/noprofile.png'"
               >
