--- a/src/app/features/admin-layout/user-management/user-management.component.html
+++ b/src/app/features/admin-layout/user-management/user-management.component.html
@@ -36,7 +36,11 @@
             </div>
             <h3 class="mt-3 text-xl font-medium text-gray-800">{{ currentUser.fullname }}</h3>
              <div class="px-3  rounded-full">
-              <span class="text-sm text-[var(--primary)] opacity-85">{{ currentUser.role }}</span>
+              <span class="text-sm text-[var(--primary)] opacity-85">
+                {{ currentUser.role === 'superadmin' ? 'Super Admin' : currentUser.role !== 'Desk attendant' ? 'Admin' : 'Desk Attendant' }}
+
+              </span>
+              
             </div>
            
           </div>
