header roles and routes fixed, profile fixed - password nalang

--- a/src/app/shared/profile/profile-layout/profile-layout.component.html
+++ b/src/app/shared/profile/profile-layout/profile-layout.component.html
@@ -34,13 +34,15 @@
         </div>
 
         <h2 class="name">{{ user.fullname }}</h2>
-        <h3 class="designation">{{ user.role ?? 'User' }}</h3>
+        <p>Division: <span>{{ user.division_name }}</span></p>
 
         <div class="info">
           <p>Username: <span>{{ user.username }}</span></p>
-          <p>Division: <span>{{ user.division }}</span></p>
         </div>
-        <div class="department">{{ user.role }}</div>
+        <div class="department">
+          {{ user.role === 'superadmin' ? 'Super Admin' : user.role !== 'desk_attendant' ? 'Admin' : 'Desk Attendant' }}
+
+        </div>
       </div>
     </div>
   </div>
@@ -111,6 +113,8 @@
 
 <app-change-password-modal
   *ngIf="showPasswordModal"
+  [userId]="user.id"
+  [userRole]="user.role"
   (closeModal)="closePasswordModal()"
   (passwordChanged)="handlePasswordChange($event)">
 </app-change-password-modal>
